--- a/GA-GCR-DCAPP/DCWebApp/Pages/Shared/_Layout.cshtml
+++ b/GA-GCR-DCAPP/DCWebApp/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,9 @@
         <main role="main" class="pb-3">
 
             Testing for Git Hub Actions
-            and GitHub Container Registry
+            and GitHub Container Registry.
+
+            One more check.
             @RenderBody()
         </main>
     </div>
